# background-remover

./: .gitignore  README.md  app.py  main.py  pyproject.toml  run-app.bat  vercel.json
api/: index.py
docs/: EDITOR_DETAILS.md
public/static/: styles.css
public/static/js/: cleanup.js  main.js  state.js
src/background_remover/: __init__.py  api.py  app.py  image_service.py  models.py  settings.py
src/background_remover/static/: index.html  styles.css
src/background_remover/static/js/: canvas.js  cleanup.js  dom.js  main.js  state.js
tests/: test_api.py  test_image_service.py
